# store-souvenirs

./: .env.example  .gitignore  README.md  docker-compose.yml  nginx.conf  package-lock.json  pyproject.toml  simple_tests.py
cosmic_souvenirs/backend/: Dockerfile  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  entrypoint.sh  manage.py  requirements.txt  test_smoke.py
cosmic_souvenirs/backend/cart/: context_processors.py  models.py  tests.py  urls.py  views.py
cosmic_souvenirs/backend/cart/migrations/: 0001_initial.py  0002_initial.py
cosmic_souvenirs/backend/cosmic_souvenirs/: asgi.py  celery.py  production.py  settings.py  tests.py  urls.py  wsgi.py
cosmic_souvenirs/backend/cosmic_souvenirs/management/commands/: wait_for_db.py
cosmic_souvenirs/backend/frontend/static/css/: main.css
cosmic_souvenirs/backend/frontend/static/js/: cart.js  custom.js  (+4 more)
cosmic_souvenirs/backend/frontend/templates/: base.html  base.html.backup  index.html
cosmic_souvenirs/backend/orders/: models.py  payment.py  urls.py  views.py
cosmic_souvenirs/backend/orders/migrations/: 0001_initial.py  0002_initial.py
cosmic_souvenirs/backend/products/: admin.py  context_processors.py  models.py  tests.py  urls.py  views.py
cosmic_souvenirs/backend/products/migrations/: 0001_initial.py
cosmic_souvenirs/backend/reviews/: admin.py  models.py  urls.py  views.py
cosmic_souvenirs/backend/reviews/migrations/: 0001_initial.py  0002_remove_product_category_review_delete_category_and_more.py  0003_alter_review_unique_together_alter_review_product_and_more.py
cosmic_souvenirs/backend/users/: models.py  tests.py  urls.py  views.py
cosmic_souvenirs/backend/users/migrations/: 0001_initial.py
cosmic_souvenirs/docker/nginx/: Dockerfile  nginx.conf
(+12 files in other folders)
