[tool.poetry]
name = "cosmic-store"
version = "0.1.0"
description = "Backend API for Cosmic-store online store"
authors = ["Frank <thiscomp.2025@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
django = ">=5.2.8,<6.0.0"
djangorestframework = ">=3.16.1,<4.0.0"
django-cors-headers = ">=4.9.0,<5.0.0"
djangorestframework-simplejwt = ">=5.5.1,<6.0.0"
django-filter = ">=25.2,<26.0"
psycopg2-binary = ">=2.9.11,<3.0.0"
celery = ">=5.5.3,<6.0.0"
redis = ">=7.1.0"
pillow = ">=12.0.0,<13.0.0"
python-decouple = ">=3.8,<4.0"
yookassa = ">=3.8.0,<4.0.0"
requests = ">=2.32.5,<3.0.0"
python-multipart = ">=0.0.20,<0.0.21"
app = ">=0.0.1,<0.0.2"
prometheus-client = ">=0.23.1,<0.24.0"
django-prometheus = ">=2.4.1,<3.0.0"
product = ">=0.1.1.1,<0.2.0.0"
products = ">=2.0.1,<3.0.0"
django-celery-results = ">=2.6.0,<3.0.0"
django-celery-beat = "^2.8.1"
order = "^2.1.7"
dj-database-url = "^3.0.1"
review = "^1510"
django-redis = "^6.0.0"
waitress = "^3.0.2"
cart = "^1.2.3"
gunicorn = "^23.0.0"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = ">=6.1.0,<7.0.0"
django-extensions = ">=4.1,<5.0"
pytest = ">=9.0.1,<10.0.0"
pytest-django = ">=4.11.1,<5.0.0"
pytest-cov = ">=7.0.0,<8.0.0"
black = ">=25.11.0,<26.0.0"
flake8 = ">=7.3.0,<8.0.0"
isort = ">=7.0.0,<8.0.0"
pre-commit = ">=4.5.0,<5.0.0"
ipdb = ">=0.13.13,<0.14.0"

[tool.poetry.group.prod.dependencies]
gunicorn = ">=23.0.0,<24.0.0"

[tool.poetry.group.monitoring.dependencies]
prometheus-client = ">=0.23.1,<0.24.0"
django-prometheus = ">=2.4.1,<3.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"